# ESDTN2507

./: README.md
day01/: ~$ESP32_01.pptx
day01/Tarena/Tarena/components/: CMakeLists.txt
day01/Tarena/Tarena/components/LED/: led.c
day01/Tarena/Tarena/main/: main.c
day01/Tarena_BEEP/Tarena/components/: CMakeLists.txt
day01/Tarena_BEEP/Tarena/main/: main.c
day01/Tarena_BUTTON/Tarena/components/: CMakeLists.txt
day01/Tarena_BUTTON/Tarena/components/BTN/: btn.c
day01/Tarena_BUTTON/Tarena/main/: main.c
day01/Tarena_LED/Tarena/: CMakeLists.txt
day01/Tarena_LED/Tarena/main/: main.c
day01/Tarena_LED_MODULE/Tarena/components/LED/: led.h
day01/Tarena_LED_MODULE/Tarena/main/: main.c
day01/Tarena_two_core/Tarena/components/BEEP/: beep.c  beep.h
day01/Tarena_two_core/Tarena/components/BTN/: btn.h
day01/Tarena_two_core/Tarena/main/: main.c
